--- a/.github/workflows/google_play_build.yml
+++ b/.github/workflows/google_play_build.yml
@@ -12,18 +12,18 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
           cache: gradle
 
-      - name: Grant Execute Permission
+      - name: Force Fix Permissions
         run: chmod +x gradlew
 
       - name: Build Debug APK
-        run: ./gradlew assembleDebug --stacktrace
+        run: ./gradlew assembleDebug --no-build-cache --stacktrace
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
