--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,8 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId rootProject.ext.applicationId
+        applicationId "com.denyfreq.droidforge"
+        namespace "com.denyfreq.droidforge"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
