Fix: Remove stray 'x' from version and suppress SDK warnings

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ android.jetifier.ignorelist = bundletool-1.8.2.jar,\
   org.eclipse.jdt.core-3.28.0.jar,\
   koltin-compiler-embeddable-1.6.0.jar,\
   bcprov-jdk15on-1.68.jar,\
-  bcprov-jdk15on-1.70.jar
+  bcprov-jdk15on-1.70.jarandroid.suppressUnsupportedCompileSdk=34
