--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,3 +12,9 @@ android {
         versionName "1.0"
     }
 }
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+}
